[gd_scene load_steps=7 format=1]

[ext_resource path="res://scripts/tutorial_steps.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/foo40.fnt" type="BitmapFont" id=2]
[ext_resource path="res://assets/control/button.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.937255, 0.32549, 0.313726, 1 )
light_color = Color( 0.937255, 0.32549, 0.313726, 1 )
dark_color = Color( 0.937255, 0.32549, 0.313726, 1 )
border_size = 0
border_blend = false
draw_bg = true

[sub_resource type="StyleBoxFlat" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.937255, 0.32549, 0.313726, 1 )
light_color = Color( 0.937255, 0.32549, 0.313726, 1 )
dark_color = Color( 0.937255, 0.32549, 0.313726, 1 )
border_size = 0
border_blend = false
draw_bg = true

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 1, 1, 1, 1 )
light_color = Color( 0.988235, 0.984314, 0.960784, 1 )
dark_color = Color( 1, 1, 1, 1 )
border_size = 0
border_blend = true
draw_bg = true

[node name="tutorial_steps" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 276.0
margin/top = 154.0
margin/right = 502.0
margin/bottom = 194.0
script/script = ExtResource( 1 )

[node name="title_pnl" type="Panel" parent="."]

visibility/light_mask = 524288
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 750.0
margin/bottom = 50.0
custom_styles/panel = SubResource( 2 )

[node name="title_lbl" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 7.0
margin/right = 287.0
margin/bottom = 51.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Como jogar..."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="close_btn" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 705.0
margin/top = 0.0
margin/right = 749.0
margin/bottom = 50.0
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "X"
flat = false

[node name="content_pnl" type="Panel" parent="."]

visibility/opacity = 0.8
visibility/self_opacity = 0.8
visibility/behind_parent = true
visibility/blend_mode = 1
visibility/light_mask = 556033
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 49.0
margin/right = 750.0
margin/bottom = 429.0
custom_styles/panel = SubResource( 1 )

[node name="content_lbl" type="Label" parent="."]

rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 7.0
margin/top = 74.0
margin/right = 907.0
margin/bottom = 374.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.32549, 0.313726, 1 )
custom_colors/font_color_shadow = Color( 0.937255, 0.32549, 0.313726, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 0
text = "Voce tem a missao de cuidar do galinheiro, nao deixe os frangos sairem!"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="next_bt" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 465.0
margin/top = 344.0
margin/right = 721.0
margin/bottom = 408.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="next_lbl" type="Label" parent="next_bt"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 23.0
margin/top = 10.0
margin/right = 232.0
margin/bottom = 54.0
custom_fonts/font = ExtResource( 2 )
text = "PROXIMO"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="close_btn" to="." method="_on_close_btn_pressed"]

[connection signal="pressed" from="next_bt" to="." method="_on_next_bt_pressed"]


